This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: string exceptions inconsistently deprecated/disabled
Type: behavior Stage: resolved
Components: Interpreter Core Versions: Python 2.5
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: brett.cannon Nosy List: brett.cannon, exarkun, python-dev
Priority: normal Keywords:

Created on 2007-09-11 15:16 by exarkun, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Messages (4)
msg55825 - (view) Author: Jean-Paul Calderone (exarkun) * (Python committer) Date: 2007-09-11 15:16
Python 2.5 deprecated raising string exceptions.  It also added the
throw method to generator objects which can be used to raise an
exception, including a string exception.  Raising an exception with this
method doesn't issue a deprecation warning.

It looks like Python 2.6 will remove string exceptions entirely. 
Current trunk still allows strings to be passed to the throw method of
generators though, and raises the string exception, again without a
deprecation warning.
msg55834 - (view) Author: Brett Cannon (brett.cannon) * (Python committer) Date: 2007-09-11 21:03
Fixed on the trunk in rev. 58108.  Need to change 2.5 to raise a warning.
msg55835 - (view) Author: Brett Cannon (brett.cannon) * (Python committer) Date: 2007-09-11 21:12
Rev. 58109 covers 2.5.
msg133712 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2011-04-14 05:20
New changeset 7563f10275a2 by Senthil Kumaran in branch 'default':
merge from 3.2.
http://hg.python.org/cpython/rev/7563f10275a2
History
Date User Action Args
2022-04-11 14:56:26adminsetgithub: 45488
2011-04-14 05:20:58python-devsetnosy: + python-dev

messages: + msg133712
stage: resolved
2007-09-11 21:12:57brett.cannonsetstatus: open -> closed
resolution: fixed
messages: + msg55835
2007-09-11 21:03:13brett.cannonsetpriority: normal
messages: + msg55834
versions: - Python 2.6
2007-09-11 19:34:16brett.cannonsetassignee: brett.cannon
nosy: + brett.cannon
2007-09-11 15:16:35exarkuncreate