Generators had their throw() method allowing string exceptions.  That's a no-no.

Fixes issue #1147.  Need to fix 2.5 to raise a proper warning if a string
exception is passed in.